--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,45 @@ body {
 }
 
 #button  {
-    position: absolute;
+    /* position: absolute;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 300px;
-    height: 150px;
+    transform: translate(-50%, -50%); */
+    margin-top: 20%;
+    width: 300px; 
+    height: 100px;
     background-color: white;
     border-radius: 10px;
+}
+
+#cont {
+    display: flex;
+    justify-content: center;
+    /* margin-top: 50vh; */
+	/* margin-top: 2%; */
+    /* transform: translateY(-50%); */
+}
+
+.id {
+    /* margin-top: 6%; */
+    text-align: center;
+    padding: 50px;
+    /* position: relative; */
+}
+
+.pass {
+	height: 200px;
+	margin-left: 8%;
+	margin-right: 8%;
+	margin-bottom: 2%;
+	transition: all 0.2s;
+
+}	
+
+.pass:hover {
+	transform: scale(1.2);
+  }
+  
+.pass:nth-child(1){
+	border : 0px solid black;
+	height:210px;
 }
